--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
-!<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Memory Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>Memory Card Game</title>
   </head>
-
   <body>
+    <header>
     <h1>Memory Game</h1>
+    </header>
+    <nav>
+      <a href="#instructions">Instructions</a>
+      <a href="#game">Game</a>
+    </nav>
+    <main>
+      <section id="instructions">
+      <h2>Instructions</h2>
+      <p>
+        Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in
+        which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of
+        the game is to turn over pairs of matching cards.
+      </p>
+      </section>
+      <section id="game">
+      <h2>Game</h2>
+      <p>
+        This game is a great family card game. You can play it with a regular pack of cards, or with picture cards that your
+        child might like. Younger players are often able to compete with older players because they can be very good at
+        memory-based games. The objective is to collect the most pairs of cards.
+      </p>
+      </section>
+      <div>
+      <img src="images/queen-of-diamonds.png" alt="Queen of Diamonds">
+      <img src="images/queen-of-hearts.png" alt="Queen of Hearts">
+      <img src="images/king-of-diamonds.png" alt="King of Diamonds">
+      <img src="images/king-of-hearts.png" alt="King of Hearts">
+      </div>
+    </main>
+    <footer class="clearfix">
+      <p class="copyright">Copyright 2017</p>
+      <p class="message">Created with &hearts; by <span class="name">GA</span></p>
+    </footer>
+    <script src="js/main.js"></script>
   </body>
-
 </html>
