created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-    <h1>Memory Game</h1>
+      <h1>Memory Game</h1>
     </header>
     <nav>
       <a href="#instructions">Instructions</a>
@@ -20,30 +20,28 @@
       <section id="instructions">
         <h2>Instructions</h2>
         <p>
-          Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in
-          which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of
+          Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card
+          game in
+          which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The
+          object of
           the game is to turn over pairs of matching cards.
         </p>
       </section>
       <section id="game">
         <h2>Game</h2>
         <p>
-          This game is a great family card game. You can play it with a regular pack of cards, or with picture cards that your
-          child might like. Younger players are often able to compete with older players because they can be very good at
-          memory-based games. The objective is to collect the most pairs of cards.
+          The goal of this game is to collect the most pairs of cards. It can be played with a regular pack of cards or
+          with picture cards. Younger players are often able to compete with older players because they can be excellent
+          at memory-based games.
         </p>
       </section>
-      <!-- <div>
-        <img src="images/queen-of-diamonds.png" alt="Queen of Diamonds">
-        <img src="images/queen-of-hearts.png" alt="Queen of Hearts">
-        <img src="images/king-of-diamonds.png" alt="King of Diamonds">
-        <img src="images/king-of-hearts.png" alt="King of Hearts">
-      </div> -->
       <div id="game-board" class="board clearfix"></div>
+      <p id="score"></p>
+      <button type="button" id="button" onclick="resetCards()">Reset</button>
     </main>
     <footer class="clearfix">
-      <p class="copyright">Copyright 2017</p>
-      <p class="message">Created with &hearts; by <span class="name">GA</span></p>
+      <p class="copyright">Copyright 2019</p>
+      <p class="message">Created with &hearts; by <span class="name">Moayad Alnuwaysir at GA</span></p>
     </footer>
     <script src="js/main.js"></script>
   </body>
