--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -15,6 +15,8 @@
     <nav>
       <a href="#instructions">Instructions</a>
       <a href="#game">Game</a>
+      <a href="https://www.linkedin.com/in/moayad-alnuwaysir/" target="_blank" rel="noopener nonoreferrer">About The
+        Developer</a>
     </nav>
     <main>
       <section id="instructions">
