created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -42,7 +42,7 @@
       <button type="button" id="button" onclick="resetCards()">Reset</button>
     </main>
     <footer class="clearfix">
-      <p class="copyright">Copyright 2019</p>
+      <p class="copyright">Copyright &copy; 2019</p>
       <p class="message">Created with &hearts; by <span class="name">Moayad Alnuwaysir at GA</span></p>
     </footer>
     <script src="js/main.js"></script>
